# aname

./: CMakeLists.txt  Canvas.cpp  README.md  main.cpp
Engine/: Camera.cpp  Camera.h  Canvas.cpp
src/: main.cpp
src/Display/: Canvas.cpp  Canvas.h
src/Engine/Materials/: Material.cpp  Material.h
src/Engine/Objects/Lights/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h
src/Engine/Objects/Meshes/: Mesh.cpp  Mesh.h  Sphere.cpp  Sphere.h
src/Engine/Objects/Special/: Camera.cpp  Camera.h
src/Engine/Render/: RayTracer.cpp  RayTracer.h  Scene.cpp  Scene.fwd.h  Scene.h
src/Util/: Util.cpp  Util.h
